--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -109,7 +109,7 @@ body {
   border-radius: 5px;
 }
 .bg-primary {
-  background-color: #47a15d !important;
+  background-color: #e43f3f !important;
 }
 .bg-success {
   background-color: #e43f3f !important;
@@ -125,8 +125,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #47a15d !important;
-  border-color: #47a15d !important;
+  background-color: #e43f3f !important;
+  border-color: #e43f3f !important;
   color: #ffffff;
 }
 .btn-primary:hover,
@@ -134,14 +134,14 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #377e49 !important;
-  border-color: #377e49 !important;
+  background-color: #d21e1e !important;
+  border-color: #d21e1e !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff;
-  background-color: #377e49 !important;
-  border-color: #377e49 !important;
+  background-color: #d21e1e !important;
+  border-color: #d21e1e !important;
 }
 .btn-primary:hover {
   background-color: #e43f3f !important;
@@ -211,8 +211,8 @@ body {
   border-color: #d21e1e !important;
 }
 .btn-success:hover {
-  background-color: #47a15d !important;
-  border-color: #47a15d !important;
+  background-color: #e43f3f !important;
+  border-color: #e43f3f !important;
 }
 .btn-warning {
   color: #fff !important;
@@ -239,7 +239,7 @@ body {
 }
 .btn-warning:hover {
   background-color: #ffffff !important;
-  color: #47a15d !important;
+  color: #e43f3f !important;
   border-color: #ffffff !important;
 }
 .btn-danger,
@@ -310,23 +310,23 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background-color: transparent !important;
-  border-color: #47a15d;
-  color: #47a15d;
+  border-color: #e43f3f;
+  color: #e43f3f;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #2c653a !important;
+  color: #b31919 !important;
   background-color: transparent!important;
-  border-color: #2c653a !important;
+  border-color: #b31919 !important;
   box-shadow: none!important;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #47a15d !important;
-  border-color: #47a15d !important;
+  background-color: #e43f3f !important;
+  border-color: #e43f3f !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -476,7 +476,7 @@ body {
   border-color: #fafafa !important;
 }
 .text-primary {
-  color: #47a15d !important;
+  color: #e43f3f !important;
 }
 .text-secondary {
   color: #e43f3f !important;
@@ -532,14 +532,14 @@ a.text-danger.active {
 a.text-white:hover,
 a.text-white:focus,
 a.text-white.active {
-  color: #47a15d !important;
+  color: #e43f3f !important;
 }
 a.text-black:hover {
-  color: #47a15d !important;
+  color: #e43f3f !important;
 }
 a.text-black:focus,
 a.text-black.active {
-  color: #47a15d !important;
+  color: #e43f3f !important;
 }
 a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]) {
   position: relative;
@@ -555,7 +555,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):hover {
   background-position: 0px 1.2em;
 }
 .nav-tabs .nav-link.active {
-  color: #47a15d;
+  color: #e43f3f;
 }
 .nav-tabs .nav-link:not(.active) {
   color: #232323;
@@ -584,8 +584,8 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):hover {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #47a15d;
-  border-color: #47a15d;
+  background-color: #e43f3f;
+  border-color: #e43f3f;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -596,11 +596,11 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):hover {
 }
 a,
 a:hover {
-  color: #47a15d;
+  color: #e43f3f;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #97d1a5;
+  color: #fdf2f2;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -619,6 +619,9 @@ a:hover {
   color: #ffffff;
 }
 /* Scroll to top button*/
+.scrollToTop_wraper {
+  display: none;
+}
 .form-control {
   font-size: 1rem;
   font-weight: 400;
@@ -626,14 +629,14 @@ a:hover {
 .form-control:hover,
 .form-control:focus {
   border-color: #e43f3f !important;
-  color: #47a15d !important;
+  color: #e43f3f !important;
 }
 .form-control:-webkit-input-placeholder {
   font-size: 1rem;
   font-weight: 400;
 }
 blockquote {
-  border-color: #47a15d;
+  border-color: #e43f3f;
 }
 /* Forms */
 .mbr-form .input-group-btn a.btn {
@@ -651,14 +654,14 @@ blockquote {
 }
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #47a15d;
+  background-color: #e43f3f;
   color: #ffffff;
 }
 .jq-number__spin {
   transition: 0.25s ease;
 }
 .jq-number__spin:hover {
-  border-color: #47a15d;
+  border-color: #e43f3f;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:after,
@@ -670,14 +673,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #47a15d;
-  border-bottom-color: #47a15d;
+  border-top-color: #e43f3f;
+  border-bottom-color: #e43f3f;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
   color: #ffffff !important;
-  background-color: #47a15d !important;
+  background-color: #e43f3f !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -708,7 +711,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%2347a15d' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23e43f3f' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.5;
@@ -1857,7 +1860,7 @@ a {
   font-weight: bold;
 }
 .cid-scxtBrCFJM .number:hover {
-  color: #47a15d;
+  color: #e43f3f;
 }
 .cid-scxtBrCFJM .social_out {
   display: flex;
@@ -1872,7 +1875,7 @@ a {
   transition: .2s all;
 }
 .cid-scxtBrCFJM .email:hover {
-  color: #47a15d;
+  color: #e43f3f;
 }
 .cid-scxtBrCFJM .copyright {
   color: #000000;
